# graphme

./: .gitignore  README.md  drawgraph.ipynb  pyproject.toml
etl/: export.sql  ingest.py
etl/dbt/: dbt_project.yml  profiles.yml
etl/dbt/models/raw/: groups.sql  members.sql  members_unnested.sql  messages.sql  schema.yml  sources.yml
etl/dbt/models/standardized/: favs.sql  graphable.sql
